# Gen-AI-Powered-Customer-Complaint-Analysis-System

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: dependencies.py  main.py
api/routers/: analysis.py  auth.py  complaints.py  health.py  models.py
api/schemas/: auth.py  complaint.py  model.py
core/: auth.py  database.py  db_models.py  rag_engine.py  settings.py  startup.py
core/analysis/: __init__.py  classifier.py  evaluator.py  multi_task_model.py  preprocessor.py
core/validation/: __init__.py  complaint_validator.py
data/seeds/: categories.yaml
frontend/: app.py
frontend/pages/: 1_Submit_Complaint.py  2_Cases.py  3_Dashboard.py  4_Admin_Train.py
frontend/utils/: api_client.py  auth_guard.py
scripts/: benchmark_models.py  prepare_cfpb_data.py  seed_from_cfpb.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_validator.py
