[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complaint-analysis-system"
version = "1.0.0"
description = "Gen-AI Powered Customer Complaint Analysis System"
requires-python = ">=3.9"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    # ML
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    "mlflow>=2.12.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Generation
    "faker>=24.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # Frontend
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    # RAG — Phase 2
    "sentence-transformers>=2.7.0,<3.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
benchmark = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tabulate>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
